--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     line-height: 1.5;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 400;
     color: var(--clr-primary-1);
     background-color: var(--clr-primary-4) ;
@@ -38,8 +38,14 @@ h3 {
     text-transform: capitalize;
     font-size: 2rem;
 }
+
+h4 {
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
 p{
-    margin-top: 15px;
+    margin-top: 10px;
 }
 
 button {
@@ -81,7 +87,6 @@ nav {
 
 .nav-logo {
     flex: 2;
-   
     color: var(--clr-primary-2);
     opacity: 1;
     font-weight: 700;
@@ -109,7 +114,7 @@ nav {
     margin:auto;
     padding-top: 200px;
     height: 100vh;
-    width: 90vw;
+    width: 100vw;
     background-image: url(./img/cat-title.jpg);
     background-size: cover;
 }
@@ -117,7 +122,7 @@ nav {
 .intro-sec-container {
     margin: auto;
     background: var(--clr-light-opacity-1);
-    width: 1000px;
+    width: 90%;
     height: 250px;
     text-align: center;
     color: var(--clr-primary-3);
@@ -128,7 +133,7 @@ nav {
     text-transform: capitalize;
 }
 
-.intro-sec-title p {
+.intro-sec-container p {
     font-size: 2rem;
 }
 
@@ -192,8 +197,6 @@ nav {
 
 .c-g-c-img-container {
     text-align: left;
-    font-size: 1.2rem;
-    font-weight: 600;
     height: 400px;
     width: 100%;
     display: flex;
@@ -208,6 +211,7 @@ nav {
 }
 
 .c-g-c-img-container p {
+    font-weight: 600;
     flex: 1;
     margin-bottom: 10px;
 }
@@ -244,3 +248,38 @@ nav {
     width: 100%;
     object-fit: cover;
 }
+
+/* contact sec */
+#contact-sec {
+    height: 100vh;
+    width: 100vw;
+}
+
+.contact-container, .c-img-container {
+  height: 500px; 
+    width: 100%;
+}
+
+.c-img-container img {
+    width: 100%;
+    height: 100%; 
+    object-fit: cover;
+}
+
+.c-infor {
+    width: 90%;
+    margin: auto;
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 500px 1fr;
+    align-items: center;   
+}
+
+.c-i-text ul {
+    display: flex;
+    justify-content: space-around;
+    list-style:  none;
+}
+
+
+
