--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
   --clr-primary-4: rgb(255, 245, 253);
   --clr-primary-5:  rgb(157, 157, 157);
   --clr-light-opacity-1: rgb(0, 90, 141, 0.4);
-  
+  --primary-font:  'Poppins', sans-serif;
+  --brand-font: 'Amatic SC', cursive;
   --transition: all 0.3s linear;
   --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
@@ -20,7 +21,7 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--primary-font);
     line-height: 1.5;
     font-size: 1.2rem;
     font-weight: 400;
@@ -66,9 +67,9 @@ nav {
     position: fixed;
     top:0;
     background-color: var(--clr-primary-4) ;
-    height: 80px;
-    width: 100vw;
-  
+    height: 100px;
+    width: 100vw;  
+    
 }
 
 .nav-display {
@@ -87,21 +88,38 @@ nav {
 
 .nav-logo {
     flex: 2;
-    color: var(--clr-primary-2);
+    color: var(--clr-primary-3);
     opacity: 1;
-    font-weight: 700;
+}
+
+.nav-logo img {
+    width: 260px;
+    height: 100%;
+    object-fit: contain;
 }
 
 .nav-links {
     flex: 1;
 }
 .nav-links ul {
-    display: flex;
-    font-size: 1.2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    font-size: 1.3rem;
     font-weight: 700;
     text-transform: uppercase;
-    justify-content: space-between;
     list-style: none;
+}
+.nav-links li {
+    position: relative;
+    text-align: center;
+}
+.nav-links-bg {
+    height: 50px;
+    position: absolute;
+    z-index: -1;
+    top: -40%;
+    left: -2%;
+    
 }
 .nav-links a {
     text-decoration: none;
@@ -129,7 +147,9 @@ nav {
 }
 
 .intro-sec-container h1{
-    font-size: 6rem;
+    font-family: var(--primary-font);
+    font-weight: 600;
+    font-size: 7rem;
     text-transform: capitalize;
 }
 
@@ -218,6 +238,8 @@ nav {
 
 /* about me section */
 #aboutme-sec {
+    background: var(--clr-primary-1);
+    color: var(--clr-primary-4);
     display: flex;
     width: 100vw;
     height: 100vh;
@@ -253,7 +275,10 @@ nav {
 #contact-sec {
     height: 100vh;
     width: 100vw;
+    background: var(--clr-primary-1);
+    color: var(--clr-primary-4);
 }
+
 
 .contact-container, .c-img-container {
   height: 500px; 
