--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
   --transition: all 0.3s linear;
   --light-shadow: 10px 6px 8px var(--clr-primary-3);
   --dark-shadow: 0px 0px 20px var(--clr-primary-2);
+    --section-height: 600px;
+    --section-width: 1400px;
 }
 /* ====== Global format ======*/
 * {
@@ -124,7 +126,7 @@ nav {
 }
 .nav-links a:hover {
     color: var(--clr-primary-3);
-    text-shadow: 1px 1px 10px var(--clr-primary-3);
+    text-shadow: 5px 5px 10px var(--clr-primary-3);
 }
 
 .nav-links-bg {
@@ -143,9 +145,9 @@ nav {
 /* ====> main <==== */
 /* introduciton section */
 #intro-sec {
-    margin: 120px auto 0px auto;
-    height: 80vh;
-    width: 90vw;
+    margin: 125px auto 150px auto;
+    height: 600px;
+    width: 95vw;
     background-image: url(./img/intro-bg.png);
     background-size: cover;
     box-shadow: var(--dark-shadow);
@@ -177,14 +179,15 @@ nav {
 /* facts section */
 
 #facts-sec {
-    height: 100vh;
+    margin-bottom: 150px;
+    height: 600px;
     width: 100vw;
     display: flex;
 }
 
 .facts-sec-container {
     margin: auto;
-    height: 500px;
+    height: 85%;
     width: 90vw;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -192,8 +195,26 @@ nav {
 }
 .facts-sec-img-container {
     height: 500px;
-
+    position: relative;
 }
+
+.f-s-i-c-frame {
+    border: var(--clr-primary-3) solid 10px;
+    opacity: 0.7;
+    height: 520px;
+    width: 600px;
+    position: absolute;
+    left:10%;
+    z-index: -1;
+}
+
+.f-s-i-c-frame.f1 {
+    transform: rotate(25deg);
+}
+.f-s-i-c-frame.f2 {
+    transform: rotate(10deg);
+}
+
 
 .facts-sec-img-container img{
     height: 100%;
@@ -204,21 +225,25 @@ nav {
     display: flex;
     flex-direction: column;
 }
+.facts-sec-description h2 {
+  flex: 1;
+  text-align: center;
+} 
 .f-s-d-text {
-    flex: 4;
+    flex: 5;
 }
 
 .f-s-d-button {
     flex:1;
-  
+    justify-content: flex-end;
 }
 
 .f-s-d-button button {
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: 600;
-    height: 80%;
-    width: 50%;
+    height: 100%;
+    width: 100%;
     border: none;
     background: var(--clr-primary-4);
     color: var(--clr-primary-1);
@@ -239,7 +264,7 @@ nav {
 
 /* gallery section */
 #gallery-sec {
-    margin: auto;
+    margin: 0px auto 150px auto;
     width: 90vw;
     text-align: center;
 }
@@ -282,12 +307,13 @@ nav {
     color: var(--clr-primary-4);
     display: flex;
     width: 100vw;
-    height: 100vh;
+    height: 650px;
+    margin-bottom: 150px;
 }
 
 .aboutme-sec-container {
     margin: auto;
-    height: 460px;
+    height: 80%;
     width: 90vw;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -299,6 +325,10 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.am-s-d-title {
+    color: var(--clr-primary-3);
 }
 
 .quote-mark {
@@ -317,10 +347,11 @@ nav {
 
 /* contact sec */
 #contact-sec {
-    height: 100vh;
+    height: 650px;
     width: 100vw;
-    background: var(--clr-primary-1);
-    color: var(--clr-primary-4);
+    margin-bottom: 100px;
+    background: var(--clr-primary-4);
+    color: var(--clr-primary-1);
 }
 
 
@@ -345,19 +376,26 @@ nav {
 }
 
 .c-i-text ul {
-    display: flex;
-    justify-content: space-around;
-    list-style:  none;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 400px);
+    column-gap: 20px;
+    row-gap: 20px;
+    list-style: none;
+   
+}
+
+.c-i-text li {
+    padding: 10px;
+    text-overflow: wrap;
 }
 
 .c-i-cta a {
     transition: var(--transition);
     text-decoration: none;
-    color: var(--clr-primary-4);
+    color: var(--clr-primary-3);
 }
 
 .c-i-cta a:hover {
-    color: var(--clr-primary-3);
-
+    text-shadow: 5px 5px 10px var(--clr-primary-3);
 }
 
