--- a/style.css
+++ b/style.css
@@ -1,418 +1,611 @@
 /* ====== Global variable ======*/
 :root {
   /* of primary color*/
-/* #022e57 */
-/* #005a8d */
-/* #ff96ad */
-/* #fff5fd */
-  
+  /* #022e57 */
+  /* #005a8d */
+  /* #ff96ad */
+  /* #fff5fd */
+
   --clr-primary-1: rgb(2, 46, 87);
-  --clr-primary-2: rgb(0, 90, 141); 
-  --clr-primary-3: rgb(255, 150, 173); 
+  --clr-primary-2: rgb(0, 90, 141);
+  --clr-primary-3: rgb(255, 150, 173);
   --clr-primary-4: rgb(255, 245, 253);
-  --clr-primary-5:  rgb(157, 157, 157);
+  --clr-primary-5: rgb(157, 157, 157);
   --clr-light-opacity-1: rgb(0, 90, 141, 0.4);
-  --primary-font:  'Gloria Hallelujah', cursive;
+  --primary-font: "Gloria Hallelujah", cursive;
   --transition: all 0.3s linear;
+  --transition-nav: all 0.1s linear;
   --light-shadow: 10px 6px 8px var(--clr-primary-3);
   --dark-shadow: 0px 0px 20px var(--clr-primary-2);
-    --section-height: 600px;
-    --section-width: 1400px;
+  --section-height: 600px;
+  --section-width: 1400px;
 }
 /* ====== Global format ======*/
 * {
-    margin: 0; 
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
 }
 
 body {
-    font-family: var(--primary-font);
-    line-height: 1.5;
-    font-size: 1.5rem;
-    font-weight: 400;
-    color: var(--clr-primary-1);
-    background-color: var(--clr-primary-4) ;
+  font-family: var(--primary-font);
+  line-height: 1.5;
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: var(--clr-primary-1);
+  background-color: var(--clr-primary-4);
 }
 
 h2 {
-    font-size: 3.5rem;
-    text-transform: uppercase;
-    letter-spacing: 8px;
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  letter-spacing: 8px;
 }
 
 h3 {
-    text-transform: capitalize;
-    font-size: 2rem;
+  text-transform: capitalize;
+  font-size: 2rem;
 }
 
 h4 {
-    text-transform: uppercase;
-    font-size: 1.5rem;
-    font-weight: 600;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
-p{
-    margin-top: 10px;
+p {
+  margin-top: 10px;
 }
 
 button {
-    color: inherit;
-    font-size: inherit;
-    font-family: inherit;
+  color: inherit;
+  font-size: inherit;
+  font-family: inherit;
 }
 
-ul, li {
-    font-family: inherit;
-    font-size: inherit;
+ul,
+li {
+  font-family: inherit;
+  font-size: inherit;
+}
+
+@media screen and (max-width: 900px) {
+  h2 {
+    font-size: 2.5rem;
+  }
 }
 
 /* ====== Element formats ======*/
 
 /* navbar */
-nav {
-    position: fixed;
-    top:0;
-    background-color: var(--clr-primary-4) ;
-    height: 100px;
-    width: 100vw;  
-    
+
+.navbar {
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  transition: var(--transition-nav);
+  background-color: var(--clr-primary-4);
 }
 
 .nav-display {
-    display: none;
-    z-index: -99;
-}
-
-#navbar {
-    margin: auto;
-    height: 100%;
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: none;
+  z-index: -99;
 }
 
 .nav-logo {
-    flex: 3;
-    color: var(--clr-primary-3);
-    opacity: 1;
+  height: 120px;
+  flex: 3;
+  color: var(--clr-primary-3);
+  display: flex;
+  align-items: center;
 }
 
 .nav-logo img {
-    width: 260px;
-    height: 100%;
-    object-fit: contain;
+  width: 180px;
+  height: 100%;
+  object-fit: contain;
 }
 
-.nav-links {
-    flex: 2;
+.nav-toggle {
+  font-size: 2.5rem;
+  color: var(--clr-primary-3);
+  display: none;
+  z-index: -99;
 }
-.nav-links ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    font-size: 1.3rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    list-style: none;
+
+.nav-links-container {
+  flex: 2;
+  transition: var(--transition);
+}
+.nav-links {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  font-size: 1.3rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  list-style: none;
 }
 .nav-links li {
-    position: relative;
-    text-align: center;
+  text-align: center;
+  background-image: url(./img/background-nav.png);
+  background-size: contain;
 }
 
 .nav-links a {
-    transition: var(--transition);
-
+  transition: var(--transition);
+  text-decoration: none;
+  color: var(--clr-primary-2);
 }
 .nav-links a:hover {
-    color: var(--clr-primary-3);
-    text-shadow: 5px 5px 10px var(--clr-primary-3);
+  color: var(--clr-primary-3);
+  text-shadow: 5px 5px 10px var(--clr-primary-3);
 }
 
-.nav-links-bg {
-    height: 50px;
-    position: absolute;
-    z-index: -1;
-    top: -40%;
-    left: -2%;
-    
+@media screen and (max-width: 1200px) {
+  .nav-logo {
+    flex: 1;
+  }
+  .nav-links {
+    flex: 1;
+  }
 }
-.nav-links a {
-    text-decoration: none;
-    color: var(--clr-primary-2)
+
+@media screen and (max-width: 900px) {
+  .navbar {
+    display: block;
+    overflow: hidden;
+    z-index: 1;
+  }
+
+  .navbar-toggle {
+    border-radius: 0% 0% 50% 50%;
+  }
+
+  .nav-display {
+    display: none;
+    z-index: -99;
+  }
+
+  .nav-logo {
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .nav-toggle {
+    display: inline;
+    z-index: 2;
+    cursor: pointer;
+    transition: var(--transition);
+  }
+
+  .nav-toggle:hover {
+    transform: rotate(90deg) scale(1.2);
+  }
+
+  .nav-links-container {
+    height: 0px;
+  }
+
+  .nav-links {
+    display: block;
+  }
+
+  .nav-links li {
+    height: 100px;
+    background: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .nav-links li:hover {
+    background-image: url(./img/background-nav.png);
+    background-size: contain;
+  }
 }
 
 /* ====> main <==== */
 /* introduciton section */
 #intro-sec {
-    margin: 125px auto 150px auto;
-    height: 800px;
-    width: 95vw;
-    background-image: url(./img/intro-bg.png);
-    background-size: cover;
-    background-position: 50%, 50%;
-    box-shadow: var(--dark-shadow);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  margin: 150px auto 150px auto;
+  height: 800px;
+  width: 95vw;
+  background-image: url(./img/intro-bg.png);
+  background-size: cover;
+  background-position: 50%, 50%;
+  box-shadow: var(--dark-shadow);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .intro-sec-container {
-    background: var(--clr-light-opacity-1);
-    width: 80%;
-    height: 50%;
-    text-align: center;
-    color: var(--clr-primary-3);
-
+  background: var(--clr-light-opacity-1);
+  width: 80%;
+  height: 50%;
+  text-align: center;
+  color: var(--clr-primary-3);
 }
 
-.intro-sec-container h1{
-    font-family: var(--primary-font);
-    font-weight: 600;
-    font-size: 7rem;
-    text-transform: capitalize;
+.intro-sec-container div {
+  padding: 10px;
+}
+
+.intro-sec-container h1 {
+  font-family: var(--primary-font);
+  font-weight: 600;
+  font-size: 7rem;
+  text-transform: capitalize;
 }
 
 .intro-sec-container p {
-    font-size: 2.5rem;
+  font-size: 2.5rem;
+}
+
+@media screen and (max-width: 1200px) {
+  #intro-sec {
+    background-size: cover;
+  }
+  .intro-sec-container {
+    width: 80%;
+    height: 30%;
+  }
+  .intro-sec-container h1 {
+    font-size: 5rem;
+  }
+  .intro-sec-container p {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  #intro-sec {
+    margin: 150px auto 150px 20px;
+    height: 500px;
+    width: 85vw;
+    position: relative;
+    background-size: cover;
+    background-position: 50%, 50%;
+  }
+  .intro-sec-container {
+    position: absolute;
+    width: 85vw;
+    height: 500px;
+    left: 50px;
+    top: 50px;
+    border: var(--clr-primary-1) solid 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .intro-sec-container h1 {
+    font-size: 5rem;
+  }
+  .intro-sec-container p {
+    font-size: 2rem;
+  }
 }
 
 /* facts section */
 
-#facts-sec {
-    margin-bottom: 150px;
-    height: 600px;
-    width: 100vw;
-    display: flex;
+.facts-sec-container {
+  margin: 0px auto 150px auto;
+  height: 85%;
+  width: 90vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 100px;
 }
 
-.facts-sec-container {
-    margin: auto;
-    height: 85%;
-    width: 90vw;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 50px; 
-}
 .facts-sec-img-container {
-    height: 500px;
-    position: relative;
+  height: 500px;
+  position: relative;
 }
 
 .f-s-i-c-frame {
-    border: var(--clr-primary-3) solid 10px;
-    opacity: 0.7;
-    height: 520px;
-    width: 600px;
-    position: absolute;
-    left:10%;
-    z-index: -1;
+  border: var(--clr-primary-3) solid 10px;
+  opacity: 0.5;
+  height: 520px;
+  width: 90%;
+  position: absolute;
+  left: 5%;
+  z-index: -1;
 }
 
 .f-s-i-c-frame.f1 {
-    transform: rotate(25deg);
+  transform: rotate(15deg);
 }
+
 .f-s-i-c-frame.f2 {
-    transform: rotate(10deg);
+  transform: rotate(5deg);
 }
 
-
-.facts-sec-img-container img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+.facts-sec-img-container img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 .facts-sec-description {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .facts-sec-description h2 {
   flex: 1;
   text-align: center;
-} 
+}
 .f-s-d-text {
-    flex: 5;
+  flex: 5;
 }
 
 .f-s-d-button {
-    flex:1;
-    justify-content: flex-end;
+  flex: 1;
+  justify-content: flex-end;
 }
 
 .f-s-d-button button {
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: 600;
-    height: 100%;
-    width: 100%;
-    border: none;
-    background: var(--clr-primary-4);
-    color: var(--clr-primary-1);
-    border-radius: 50px;
-    box-shadow: var(--light-shadow);
-    transition: var(--transition);
-    cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 600;
+  height: 100%;
+  width: 100%;
+  border: none;
+  background: var(--clr-primary-4);
+  color: var(--clr-primary-1);
+  border-radius: 50px;
+  box-shadow: var(--light-shadow);
+  transition: var(--transition);
+  cursor: pointer;
 }
 
 .f-s-d-button button:hover {
-    background: var(--clr-primary-1);
-    color: var(--clr-primary-3);
+  background: var(--clr-primary-1);
+  color: var(--clr-primary-3);
 }
 
-.f-s-d-button-onclick{
-    transform: scale(1.05);
+.f-s-d-button-onclick {
+  transform: scale(1.05);
+}
+
+@media screen and (max-width: 900px) {
+  .facts-sec-container {
+    height: 85%;
+    width: 90vw;
+    display: grid;
+    grid-template-columns: none;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 50px;
+  }
 }
 
 /* gallery section */
-#gallery-sec {
-    margin: 0px auto 150px auto;
-    width: 95vw;
-    text-align: center;
+.cat-gallery-container {
+  margin: 0px auto 150px auto;
+  width: 95vw;
+  text-align: center;
+  transition: var(--transition-nav);
 }
 
 .c-g-c-imgs {
-    width: 90%;
-    margin: 50px auto;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(5, 400px);
-    column-gap: 20px;
-    row-gap: 20px;
+  margin: 50px auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(5, 400px);
+  column-gap: 40px;
+  row-gap: 40px;
 }
 
 .c-g-c-img-container {
-    width: 100%;
-    height: 100%;
-    box-shadow: 5px 5px 20px grey;
-    position: relative;
-    overflow: hidden;
-    
+  width: 100%;
+  height: 100%;
+  box-shadow: 5px 5px 20px grey;
+  overflow: hidden;
 }
 
 .c-g-c-img-container:nth-child(2) {
-    grid-column: 2/3;
-    grid-row: 1 / span 2;
+  grid-column: 2/3;
+  grid-row: 1 / span 2;
 }
 .c-g-c-img-container:nth-child(3) {
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-     filter: grayscale(100%);
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
 .c-g-c-img-container:nth-child(4) {
-    grid-column: 1/2;
-    grid-row: 2 / span 2;   
-     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-     filter: grayscale(100%);
+  grid-column: 1/2;
+  grid-row: 2 / span 2;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
 .c-g-c-img-container:nth-child(6) {
-    grid-column: 3/4;
-    grid-row: 2 / span 2;
+  grid-column: 3/4;
+  grid-row: 2 / span 2;
 }
 .c-g-c-img-container:nth-child(7) {
-    grid-column: 1/ span 3;
-    grid-row: 4/ span 2;
+  grid-column: 1 / span 3;
+  grid-row: 4 / span 2;
 }
 
 .c-g-c-img-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: 50% 20%;
-      transition: var(--transition);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 20%;
+  transition: var(--transition);
 }
 .c-g-c-img-container img:hover {
-    transform: scale(1.2, 1.2) ;
+  transform: scale(1.2, 1.2);
+}
+
+@media screen and (max-width: 1200px) {
+  .c-g-c-imgs {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat (10, 500px);
+  }
+
+  .c-g-c-img-container:nth-child(1) {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+  .c-g-c-img-container:nth-child(2) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .c-g-c-img-container:nth-child(3) {
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+  }
+  .c-g-c-img-container:nth-child(4) {
+    grid-column: span 2;
+    grid-row: span 1;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+  }
+  .c-g-c-img-container:nth-child(6) {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+  .c-g-c-img-container:nth-child(7) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+}
+@media screen and (max-width: 900px) {
+  .c-g-c-imgs {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(10, 400px);
+  }
+
+  .c-g-c-img-container:nth-child(2) {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+  .c-g-c-img-container:nth-child(3) {
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+  }
+  .c-g-c-img-container:nth-child(4) {
+    grid-column: span 1;
+    grid-row: span 2;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+  }
+  .c-g-c-img-container:nth-child(6) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .c-g-c-img-container:nth-child(7) {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
 }
 
 /* about me section */
-#aboutme-sec {
-    background: var(--clr-primary-4);
-    color: var(--clr-primary-1);
-    width: 100vw;
-    height: 650px;
-    margin-bottom: 150px;
-  
-}
 
 .aboutme-sec-container {
-    margin: auto;
-    padding: 50px;
-    height: 100%;
-    width: 95vw;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 50px; 
+  color: var(--clr-primary-1);
+  margin: 0px auto 150px auto;
+  padding: 50px;
+  height: 650px;
+  width: 95vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 50px;
+  transition: var(--transition-nav);
 }
 
 .am-s-description {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .am-s-d-title {
-    color: var(--clr-primary-3);
+  color: var(--clr-primary-3);
 }
 
 .quote-mark {
-    font-size: 3.5rem;
+  font-size: 3.5rem;
 }
 
-.am-s-img-container { 
-    border-radius: 10%;
-    overflow: hidden;
-    background: var(--clr-primary-4);
-    box-shadow: var(--light-shadow);
-  
+.am-s-img-container {
+  border-radius: 10%;
+  overflow: hidden;
+  background: var(--clr-primary-4);
+  box-shadow: var(--light-shadow);
 }
 .am-s-img-container img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 900px) {
+  .aboutme-sec-container {
+    height: auto;
+    width: 95vw;
+    display: grid;
+    grid-template-columns: none;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 0px;
+    row-gap: 50px;
+  }
 }
 
 /* contact sec */
-#contact-sec {
-    margin: 0px auto 100px auto;
-    width: 95vw;
-    background: var(--clr-primary-4);
-    color: var(--clr-primary-1);
+
+.contact-container {
+  margin: 0px auto 100px auto;
+  height: auto;
+  width: 95vw;
+  text-align: center;
+  background: var(--clr-primary-4);
+  color: var(--clr-primary-1);
+  display: grid;
+  grid-template-columns: 500px 1fr;
+  align-items: center;
+  transition: var(--transition-nav);
 }
 
+.c-c-cta a {
+  transition: var(--transition);
+  text-decoration: none;
+  color: var(--clr-primary-3);
+}
 
-.contact-container{
-    height: auto;
-    width: 100%;
+.c-c-cta a:hover {
+  text-shadow: 5px 5px 10px var(--clr-primary-3);
+}
+
+.c-c-text ul {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 350px);
+  column-gap: 20px;
+  row-gap: 20px;
+  list-style: none;
+}
+
+.c-c-text li {
+  text-overflow: wrap;
+}
+
+@media screen and (max-width: 900px) {
+  .contact-container {
     text-align: center;
-}
+    display: block;
+  }
+  .c-c-text ul {
+    display: block;
+  }
 
-.c-infor {
-    width: 90%;
-    margin: auto;
-    margin-top: 20px;
-    display: grid;
-    grid-template-columns: 500px 1fr;
-    align-items: center;   
+  .c-c-text li {
+    margin: 50px;
+  }
 }
-
-.c-i-text ul {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 350px);
-    column-gap: 20px;
-    row-gap: 20px;
-    list-style: none;
-}
-
-.c-i-text li {
-    text-overflow: wrap;
-}
-
-.c-i-cta a {
-    transition: var(--transition);
-    text-decoration: none;
-    color: var(--clr-primary-3);
-}
-
-.c-i-cta a:hover {
-    text-shadow: 5px 5px 10px var(--clr-primary-3);
-}
-
