--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ li {
 .am-s-img-container img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 @media screen and (max-width: 900px) {
